# spacewar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Spacewar!.sln  Spacewar!.vcxproj  Spacewar!.vcxproj.filters
Engine/: Engine.cpp  Engine.h  Input.cpp  Input.h  Math.cpp  Scene.cpp  Scene.h  main.cpp
Engine/ECS/: ECS.h
Engine/ECS/Component/: Component.cpp  Component.h  ComponentCollection.h  ComponentManager.h
Engine/ECS/Component/Embedded/: Mesh.cpp  Mesh.h  Text.h  Velocity.cpp  Velocity.h
Engine/ECS/Entity/: Entity.h  EntityDef.h  EntityManager.cpp  EntityManager.h
Engine/ECS/System/: ISystem.h  SystemManager.h
Engine/ECS/System/Embedded/: InertiaSystem.cpp  InertiaSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  MoveSystem.cpp  MoveSystem.h  TextRenderSystem.cpp  TextRenderSystem.h
Engine/ECS/System/SystemQueue/: SystemQueue.cpp  SystemQueue.h
Engine/Input/: Input.cpp  Input.h  Keyboard.h  Mouse.h
Engine/Random/: Random.cpp
Engine/Types/: Color.cpp  Color.h  Polar.cpp  Polar.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h
Engine/Utils/: Math.h  MathUtils.cpp  MathUtils.h  Random.h  StringUtils.cpp  StringUtils.h
Game/: Game.cpp  Game.h  WinMain.cpp
Game/Components/: Blast.cpp  Blast.h  Enemy.h  GravityBigObject.h  GravitySmallObject.h  JetStreamParticles.cpp  JetStreamParticles.h  LifeTime.h  Projectile.h  ProjectileLauncher.h  Rotor.h  User.h
Game/Components/Collider/: Collider.h  ColliderLethal.h  ColliderTarget.h
Game/Systems/: BlastSystem.cpp  BlastSystem.h  CollisionSystem.cpp  CollisionSystem.h  EndOfGameSystem.cpp  EndOfGameSystem.h  GravitySystem.cpp  GravitySystem.h  JetStreamSystem.cpp  JetStreamSystem.h  LifeTimeSystem.cpp  LifeTimeSystem.h  RotorSystem.cpp  RotorSystem.h  StarRenderSystem.cpp  StarRenderSystem.h
Game/Systems/UnitSystems/: EnemySystem.cpp  EnemySystem.h  ProjectileSubSystem.cpp  ProjectileSubSystem.h  UserInputSystem.cpp  UserInputSystem.h
